2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.3
 
2002-07-17  William Cohen  <wcohen@nc.rr.com>
 
	* gui/oprof_start_util.cpp: get HZ from sysconf

2002-07-17  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.base.ui: revert patch 2002-07-13, reapply
	  the same modification with QT2 designer rather QT3 designer

2002-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: set KVERS properly
 
	* dae/oprofiled.c: remove eip == 0 checking
 
	* module/oprofile.c: do check in evict_op_entry() instead,
	  as suggested by Philippe
 
2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* make.deps:
	* gui/Makefile.in: fix include search path for dependencies generation

2002-07-13  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: don't throw away last samples on shutdown
	  notification
 
2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start.base.ui: remove kernel-range specification UI

2002-07-12  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* dae/oprofiled.c:
	* libop/op_interface.h: 
	* module/oprofile.c: 
	* module/oprofile.h:
	* module/x86/op_nmi.c: 
	* module/x86/op_syscalls.c: replace partial_stop,quitting,prof_on
	  with single state variable, and clean up how shutdown is triggered.
 
	* module/oprofile.c: always init data->entries etc. for every CPU
 
2002-07-12  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in: typo in clean target

	* module/compat.h:
	* module/compat24.h:
	* module/oprofile.c:
	* module/x86/op_nmi.c: support for online/offline cpu for 2.5.23+

2002-07-11  Philippe Elie  <phil.el@wanadoo.fr>

	* Makefile.in:
	* module/Makefile.in:
	* module/x86/Makefile.in: move all goal to the topdir Makefile

2002-07-10  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update
